hide breadcrumb bar on smaller screensizes if no backlink to show, fix issues with jumplink

--- a/src/component-library/site-components/JumpToLinks/JumpToLinks.module.scss
+++ b/src/component-library/site-components/JumpToLinks/JumpToLinks.module.scss
@@ -82,10 +82,6 @@
 .stacked {
   padding: $spacing-12 0 0;
 
-  @include media(screen-m) {
-    padding-top: 0;
-  }
-
   @include media(screen-l) {
     padding-top: $spacing-10;
     padding-bottom: $spacing-7;
